[project]
name = "mbutil_zyx"
authors = [
  { name="Lars Maxfield", email="" },
]
description = "MBUtil with ZYX scheme"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/larsmaxfield/mbutil_zyx"
Issues = "https://github.com/larsmaxfield/mbutil_zyx"