[project]
name = "mbutil_zyx"
authors = [{ name="Lars Maxfield", email="" }]
description = "MBUtil with ZYX scheme"
long_description = "Importer and Exporter of MBTiles with the zyx scheme (from vips dzsave --google) in the latest release"
long_description_content_type = "text/plain"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"]

[project.urls]
Homepage = "https://github.com/larsmaxfield/mbutil_zyx"
Issues = "https://github.com/larsmaxfield/mbutil_zyx"
